--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "private": true,
-  "packageManager": "pnpm@10.12.1"
+  "packageManager": "pnpm@10.12.1",
+  "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "eslint": "^9.31.0",
+    "typescript-eslint": "^8.37.0"
+  }
 }
