Only distribute files we build

--- a/packages/x-solana-settlement/package.json
+++ b/packages/x-solana-settlement/package.json
@@ -32,6 +32,9 @@
       "types": "./dist/src/types.d.ts"
     }
   },
+  "files": [
+    "dist"
+  ],
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
     "@eslint/js": "^9.28.0",
