--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@eslint/js": "^9.31.0",
     "eslint": "^9.31.0",
+    "prettier": "^3.6.2",
     "typescript-eslint": "^8.37.0"
   }
 }
