Switch to esnext modules to be compatible with deno

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,7 @@
     "declarationMap": true,
 
     "composite": true,
-    "module": "preserve",
+    "module": "esnext",
     "noEmit": true,
 
     "lib": ["es2022"]
