--- a/packages/x-solana-settlement/package.json
+++ b/packages/x-solana-settlement/package.json
@@ -45,6 +45,7 @@
     "eslint": "^9.28.0",
     "prettier": "^3.5.3",
     "tap": "^21.1.0",
+    "tsc-esm-fix": "^3.1.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.0",
     "typescript-language-server": "^4.3.4"
