--- a/packages/x-solana-settlement/package.json
+++ b/packages/x-solana-settlement/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@faremeter/types": "^0.2.1",
+    "@logtape/logtape": "^1.0.4",
     "@noble/ed25519": "^2.3.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
