--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "private": true,
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "eslint": "^9.31.0",
-    "prettier": "^3.6.2",
-    "typescript-eslint": "^8.37.0"
+    "@eslint/js": "catalog:",
+    "eslint": "catalog:",
+    "prettier": "catalog:",
+    "typescript-eslint": "catalog:"
   }
 }
