--- a/packages/x-solana-settlement/package.json
+++ b/packages/x-solana-settlement/package.json
@@ -37,26 +37,26 @@
   ],
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
-    "@tapjs/asserts": "^4.0.1",
-    "@types/bn.js": "^5.2.0",
-    "eslint": "^9.28.0",
-    "prettier": "^3.5.3",
-    "tap": "^21.1.0",
-    "tsc-esm-fix": "^3.1.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.0",
-    "typescript-language-server": "^4.3.4"
+    "@eslint/js": "catalog:",
+    "@tapjs/asserts": "catalog:",
+    "@types/bn.js": "catalog:",
+    "eslint": "catalog:",
+    "prettier": "catalog:",
+    "tap": "catalog:",
+    "tsc-esm-fix": "catalog:",
+    "typescript": "catalog:",
+    "typescript-eslint": "catalog:",
+    "typescript-language-server": "catalog:"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1",
-    "@faremeter/types": "^0.2.1",
-    "@logtape/logtape": "^1.0.4",
-    "@noble/ed25519": "^2.3.0",
-    "@solana/spl-token": "^0.4.13",
-    "@solana/web3.js": "^1.98.2",
-    "arktype": "^2.1.20",
-    "bn.js": "^5.2.2",
-    "bs58": "^6.0.0"
+    "@coral-xyz/anchor": "catalog:",
+    "@faremeter/types": "catalog:",
+    "@logtape/logtape": "catalog:",
+    "@noble/ed25519": "catalog:",
+    "@solana/spl-token": "catalog:",
+    "@solana/web3.js": "catalog:",
+    "arktype": "catalog:",
+    "bn.js": "catalog:",
+    "bs58": "catalog:"
   }
 }
