--- a/payment-program/package.json
+++ b/payment-program/package.json
@@ -5,17 +5,17 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1",
-    "uuid": "^11.1.0"
+    "@coral-xyz/anchor": "catalog:",
+    "uuid": "catalog:"
   },
   "devDependencies": {
-    "@types/bn.js": "^5.1.0",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
-    "chai": "^4.3.4",
-    "mocha": "^9.0.3",
-    "prettier": "^2.6.2",
-    "ts-mocha": "^10.0.0",
-    "typescript": "^5.7.3"
+    "@types/bn.js": "catalog:",
+    "@types/chai": "catalog:",
+    "@types/mocha": "catalog:",
+    "chai": "catalog:",
+    "mocha": "catalog:",
+    "prettier": "catalog:",
+    "ts-mocha": "catalog:",
+    "typescript": "catalog:"
   }
 }
